--- a/index.html
+++ b/index.html
@@ -342,7 +342,84 @@
         </div>
       </section>
 
+      <section class="section">
+        <h2>Metodoloji</h2>
+        <div class="list small">
+          <ul>
+            <li><span>Top N seçimi</span><span class="muted">ecosyste.ms indirmeye göre sıralı; yedek: npm registry ve npms.io</span></li>
+            <li><span>Bağımlılık çekimi</span><span class="muted">En güncel sürümün <code>dependencies</code> alanı; isteğe bağlı <code>peerDependencies</code></span></li>
+            <li><span>Yön</span><span class="muted">Dependent → Dependency; yayılım analizi ve sistemik etki için uygun</span></li>
+            <li><span>Merkeziyet</span><span class="muted">In/Out-degree; betweenness küçük graflarda tam, büyüklerde örneklemeli</span></li>
+            <li><span>Risk skoru</span><span class="muted">Min–max normalizasyon + ağırlıklı toplam</span></li>
+            <li><span>Robustluk</span><span class="muted">Risk liderleri çıkarılarak bağlanırlık metrikleri ölçülür</span></li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section">
+        <h2>Parametreler</h2>
+        <div class="grid">
+          <div class="list small">
+            <ul>
+              <li><span><code>TOP_N</code></span><span class="muted">200 (varsayılan)</span></li>
+              <li><span><code>include_peer_deps</code></span><span class="muted">false</span></li>
+              <li><span><code>sample_k</code></span><span class="muted">otomatik; n ≤ 1200 ise tam, aksi halde 200</span></li>
+            </ul>
+          </div>
+          <div class="list small">
+            <ul>
+              <li><span><code>w_in</code>, <code>w_out</code>, <code>w_btw</code></span><span class="muted">0.5, 0.2, 0.3</span></li>
+              <li><span><code>seed</code></span><span class="muted">42 (betweenness örnekleme)</span></li>
+              <li><span><code>cache_path</code></span><span class="muted"><code>results/cache_deps.json</code></span></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footnote">Ağırlıklar senaryoya göre ayarlanabilir; risk sıralaması buna duyarlıdır.</div>
+      </section>
+
+      <section class="section">
+        <h2>Metrik Tanımları</h2>
+        <div class="list small">
+          <ul>
+            <li><span>In-Degree</span><span class="muted">Bu pakete dayanan paket sayısı; ele geçirilirse etki alanı.</span></li>
+            <li><span>Out-Degree</span><span class="muted">Paketten dışa bağımlılık sayısı; zincir karmaşıklığı.</span></li>
+            <li><span>Betweenness</span><span class="muted">En kısa yollarda aracılık; köprü/tek hata noktası göstergesi.</span></li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section">
+        <h2>Risk Skoru</h2>
+        <div class="list small">
+          <ul>
+            <li><span>Formül</span><span class="muted"><code>risk(n) = w_in · d_in'(n) + w_out · d_out'(n) + w_b · b'(n)</code></span></li>
+            <li><span>Normalizasyon</span><span class="muted">Min–max (metrik bazında)</span></li>
+            <li><span>Yorum</span><span class="muted">Merkeziyetlerin ağırlıklı birleşimi; tekil metrik uçlarını dengeler.</span></li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section">
+        <h2>Robustluk Analizi</h2>
+        <div class="list small">
+          <ul>
+            <li><span>Kaldırma senaryoları</span><span class="muted"><code>k ∈ {1,3,5}</code> en kritik düğümler risk skoruna göre çıkarılır.</span></li>
+            <li><span>Ölçümler</span><span class="muted">Bileşen sayısı, en büyük bileşen boyutu, (mümkünse) çap.</span></li>
+            <li><span>Yorum</span><span class="muted">Ağın kırılganlığı ve “tek hata noktaları”nın etkisi görünür.</span></li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section">
+        <h2>Sınırlamalar ve Gelecek Çalışmalar</h2>
+        <div class="list small">
+          <ul>
+            <li><span>Sınırlamalar</span><span class="muted">Varsayılan yalnızca <code>dependencies</code>; betweenness büyük graflarda örneklemeli; global dependents dahil değil.</span></li>
+            <li><span>Gelecek</span><span class="muted">Global dependent entegrasyonu; ağırlıkların öğrenilmesi; çok katmanlı ağ; etkileşimli görselleştirme.</span></li>
+          </ul>
+        </div>
+      </section>
+
     </div>
   </body>
   </html>
-
