Analiz iyileştirme: cascade impact analizi eklendi; doğrulama adımı isteğe bağlandı; açıklama notları eklendi; helper optimizasyonları; paper ve sunum güncellendi

--- a/index.html
+++ b/index.html
@@ -272,6 +272,46 @@
       </section>
 
       <section class="section">
+        <h2>Basamaklanma (Cascading Impact)</h2>
+        <div class="grid">
+          <div class="card">
+            <div class="card-header">Top 20 (Risk Liderleri)</div>
+            <div class="art">
+              <picture>
+                <source type="image/svg+xml" srcset="results/cascade_impact_top20.svg" />
+                <img src="results/cascade_impact_top20.png" alt="Risk liderleri için basamaklanma etkisi (ters yön etkilenen paket sayısı)" loading="lazy" />
+              </picture>
+            </div>
+            <div class="card-body">
+              <p>Bir bağımlılığın ele geçirilmesi halinde, ters yönde erişilebilen paket sayısı potansiyel etki alanını gösterir.</p>
+              <div class="links">
+                <a class="chip" href="results/cascade_impact_top20.csv" download><b>CSV</b> indir</a>
+                <a class="chip" href="results/cascade_impact_top20.svg" download><b>SVG</b> indir</a>
+                <a class="chip" href="results/cascade_impact_top20.png" download><b>PNG</b> indir</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header">Risk vs Basamaklanma</div>
+            <div class="art">
+              <picture>
+                <source type="image/svg+xml" srcset="results/risk_vs_cascade.svg" />
+                <img src="results/risk_vs_cascade.png" alt="Risk skoru ile basamaklanma etkisi ilişkisi" loading="lazy" />
+              </picture>
+            </div>
+            <div class="card-body">
+              <p>Risk skoru ile etki alanı arasındaki ilişkiyi görselleştirir; proaktif önceliklendirme için ipucu sağlar.</p>
+              <div class="links">
+                <a class="chip" href="results/risk_vs_cascade.svg" download><b>SVG</b> indir</a>
+                <a class="chip" href="results/risk_vs_cascade.png" download><b>PNG</b> indir</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section">
         <h2>Tablolar</h2>
         <div class="grid">
           <div class="card">
