Sunum: Çalışmanın Amacı bölümü eklendi (detay özet)

--- a/index.html
+++ b/index.html
@@ -87,6 +87,18 @@
       </section>
 
       <section class="section">
+        <h2>Çalışmanın Amacı</h2>
+        <div class="list small">
+          <ul>
+            <li><span>Güvenliği yeniden tanımla</span><span class="muted">Paket-içi zafiyetlerin ötesine geçip, bağımlılık topolojisini hesaba katan yapısal bir ölçüt önermek.</span></li>
+            <li><span>Yapısal önem</span><span class="muted">Her paketin ağ içindeki kritikliği ve tek hata noktası riski.</span></li>
+            <li><span>Basamaklanma etkisi</span><span class="muted">Ele geçirildiğinde yayılabilecek dolaylı etki alanını nicel ölçmek.</span></li>
+            <li><span>Politika etkisi</span><span class="muted">SSCA için proaktif, veri odaklı risk öngörüsüyle stratejiye katkı.</span></li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section">
         <h2>Ağ Görselleştirmeleri</h2>
 
         <div class="grid">
