Sunum: results/ altındaki TÜM çıktıları kapsayan kapsamlı bölüm eklendi (görseller + veri/tablo bağlantıları)

--- a/index.html
+++ b/index.html
@@ -75,6 +75,42 @@
       </section>
 
       <section class="section">
+        <h2>Tüm Çıktılar (results/)</h2>
+        <h3>Görseller</h3>
+        <div class="grid">
+          <div class="card"><div class="card-header">network_full_topN</div><div class="art"><picture><source type="image/svg+xml" srcset="results/network_full_topN.svg" /><img src="results/network_full_topN.png" alt="network_full_topN" loading="lazy" /></picture></div><div class="card-body"><div class="links"><a class="chip" href="results/network_full_topN.svg" download><b>SVG</b> indir</a><a class="chip" href="results/network_full_topN.png" download><b>PNG</b> indir</a></div></div></div>
+          <div class="card"><div class="card-header">network_topN_only</div><div class="art"><picture><source type="image/svg+xml" srcset="results/network_topN_only.svg" /><img src="results/network_topN_only.png" alt="network_topN_only" loading="lazy" /></picture></div><div class="card-body"><div class="links"><a class="chip" href="results/network_topN_only.svg" download><b>SVG</b> indir</a><a class="chip" href="results/network_topN_only.png" download><b>PNG</b> indir</a></div></div></div>
+          <div class="card"><div class="card-header">degree_histograms</div><div class="art"><picture><source type="image/svg+xml" srcset="results/degree_histograms.svg" /><img src="results/degree_histograms.png" alt="degree_histograms" loading="lazy" /></picture></div><div class="card-body"><div class="links"><a class="chip" href="results/degree_histograms.svg" download><b>SVG</b> indir</a><a class="chip" href="results/degree_histograms.png" download><b>PNG</b> indir</a></div></div></div>
+          <div class="card"><div class="card-header">scatter_correlations</div><div class="art"><picture><source type="image/svg+xml" srcset="results/scatter_correlations.svg" /><img src="results/scatter_correlations.png" alt="scatter_correlations" loading="lazy" /></picture></div><div class="card-body"><div class="links"><a class="chip" href="results/scatter_correlations.svg" download><b>SVG</b> indir</a><a class="chip" href="results/scatter_correlations.png" download><b>PNG</b> indir</a></div></div></div>
+          <div class="card"><div class="card-header">top10_in_degree</div><div class="art"><picture><source type="image/svg+xml" srcset="results/top10_in_degree.svg" /><img src="results/top10_in_degree.png" alt="top10_in_degree" loading="lazy" /></picture></div><div class="card-body"><div class="links"><a class="chip" href="results/top10_in_degree.svg" download><b>SVG</b> indir</a><a class="chip" href="results/top10_in_degree.png" download><b>PNG</b> indir</a></div></div></div>
+          <div class="card"><div class="card-header">top10_out_degree</div><div class="art"><picture><source type="image/svg+xml" srcset="results/top10_out_degree.svg" /><img src="results/top10_out_degree.png" alt="top10_out_degree" loading="lazy" /></picture></div><div class="card-body"><div class="links"><a class="chip" href="results/top10_out_degree.svg" download><b>SVG</b> indir</a><a class="chip" href="results/top10_out_degree.png" download><b>PNG</b> indir</a></div></div></div>
+          <div class="card"><div class="card-header">top10_betweenness</div><div class="art"><picture><source type="image/svg+xml" srcset="results/top10_betweenness.svg" /><img src="results/top10_betweenness.png" alt="top10_betweenness" loading="lazy" /></picture></div><div class="card-body"><div class="links"><a class="chip" href="results/top10_betweenness.svg" download><b>SVG</b> indir</a><a class="chip" href="results/top10_betweenness.png" download><b>PNG</b> indir</a></div></div></div>
+          <div class="card"><div class="card-header">top10_leaders</div><div class="art"><picture><source type="image/svg+xml" srcset="results/top10_leaders.svg" /><img src="results/top10_leaders.png" alt="top10_leaders" loading="lazy" /></picture></div><div class="card-body"><div class="links"><a class="chip" href="results/top10_leaders.svg" download><b>SVG</b> indir</a><a class="chip" href="results/top10_leaders.png" download><b>PNG</b> indir</a></div></div></div>
+          <div class="card"><div class="card-header">top20_risk</div><div class="art"><picture><source type="image/svg+xml" srcset="results/top20_risk.svg" /><img src="results/top20_risk.png" alt="top20_risk" loading="lazy" /></picture></div><div class="card-body"><div class="links"><a class="chip" href="results/top20_risk.svg" download><b>SVG</b> indir</a><a class="chip" href="results/top20_risk.png" download><b>PNG</b> indir</a></div></div></div>
+          <div class="card"><div class="card-header">cascade_impact_top20</div><div class="art"><picture><source type="image/svg+xml" srcset="results/cascade_impact_top20.svg" /><img src="results/cascade_impact_top20.png" alt="cascade_impact_top20" loading="lazy" /></picture></div><div class="card-body"><div class="links"><a class="chip" href="results/cascade_impact_top20.svg" download><b>SVG</b> indir</a><a class="chip" href="results/cascade_impact_top20.png" download><b>PNG</b> indir</a></div></div></div>
+          <div class="card"><div class="card-header">risk_vs_cascade</div><div class="art"><picture><source type="image/svg+xml" srcset="results/risk_vs_cascade.svg" /><img src="results/risk_vs_cascade.png" alt="risk_vs_cascade" loading="lazy" /></picture></div><div class="card-body"><div class="links"><a class="chip" href="results/risk_vs_cascade.svg" download><b>SVG</b> indir</a><a class="chip" href="results/risk_vs_cascade.png" download><b>PNG</b> indir</a></div></div></div>
+        </div>
+
+        <h3>Veri ve Tablolar</h3>
+        <div class="list small">
+          <ul>
+            <li><span><code>results/edges.csv</code></span><span class="muted">Kenar listesi</span> <a class="chip" href="results/edges.csv" download><b>indir</b></a></li>
+            <li><span><code>results/metrics.csv</code></span><span class="muted">Düğüm metrikleri</span> <a class="chip" href="results/metrics.csv" download><b>indir</b></a></li>
+            <li><span><code>results/risk_scores.csv</code></span><span class="muted">Risk skorları</span> <a class="chip" href="results/risk_scores.csv" download><b>indir</b></a></li>
+            <li><span><code>results/edge_betweenness_top10.csv</code></span><span class="muted">Köprü kenarlar</span> <a class="chip" href="results/edge_betweenness_top10.csv" download><b>indir</b></a></li>
+            <li><span><code>results/robustness_risk.json</code></span><span class="muted">Robustluk metrikleri</span> <a class="chip" href="results/robustness_risk.json" download><b>indir</b></a></li>
+            <li><span><code>results/graph_stats.json</code></span><span class="muted">Genel ağ istatistikleri</span> <a class="chip" href="results/graph_stats.json" download><b>indir</b></a></li>
+            <li><span><code>results/cache_deps.json</code></span><span class="muted">Bağımlılık önbelleği</span> <a class="chip" href="results/cache_deps.json" download><b>indir</b></a></li>
+            <li><span><code>results/top_packages.txt</code></span><span class="muted">Top N paket adları</span> <a class="chip" href="results/top_packages.txt" download><b>indir</b></a></li>
+            <li><span><code>results/report.md</code></span><span class="muted">Kısa sıralama raporu</span> <a class="chip" href="results/report.md" download><b>indir</b></a></li>
+            <li><span><code>results/metrics_top20_in_degree.tex</code></span><span class="muted">LaTeX tablo</span> <a class="chip" href="results/metrics_top20_in_degree.tex" download><b>indir</b></a></li>
+            <li><span><code>results/risk_scores_top20.tex</code></span><span class="muted">LaTeX tablo</span> <a class="chip" href="results/risk_scores_top20.tex" download><b>indir</b></a></li>
+            <li><span><code>results/cascade_impact_top20.csv</code></span><span class="muted">Basamaklanma sonuçları</span> <a class="chip" href="results/cascade_impact_top20.csv" download><b>indir</b></a></li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section">
         <h2>Rehber ve Kapsam</h2>
         <div class="list small">
           <ul>
