--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
       .tag { display: inline-block; font-size: 12px; color: var(--muted); background: var(--panel); border: 1px solid var(--border); border-radius: 999px; padding: 2px 10px; margin-right: 8px; }
       .lead { margin: 14px 0 10px; color: var(--muted); }
 
-      .hero {
-        background: linear-gradient(140deg, rgba(124,58,237,0.2), rgba(34,197,94,0.1));
-        border: 1px solid var(--border);
-        border-radius: 14px; padding: 16px 18px; margin: 22px 0 28px;
-      }
+      .hero { background: linear-gradient(140deg, rgba(124,58,237,0.2), rgba(34,197,94,0.1)); border: 1px solid var(--border); border-radius: 14px; padding: 16px 18px; margin: 22px 0 28px; }
       .hero strong { color: #fff; }
 
       h2 { font-size: 20px; margin: 26px 0 12px; }
@@ -46,11 +42,7 @@
       .chip { display: inline-flex; align-items: center; gap: 6px; padding: 4px 10px; border-radius: 999px; background: #0e1627; border: 1px solid var(--border); color: var(--text); font-size: 12px; }
       .chip b { color: var(--accent-2); font-weight: 600; }
       .muted { color: var(--muted); }
-      .kicker { font-size: 12px; color: var(--muted); margin-bottom: 8px; }
-      .section { margin-top: 24px; }
       .footnote { font-size: 12px; color: var(--muted); margin-top: 10px; }
-      .inline { display: inline; }
-      .small { font-size: 13px; }
       .list { background: linear-gradient(180deg, var(--panel), var(--panel-2)); border: 1px solid var(--border); border-radius: 10px; padding: 12px 14px; }
       .list ul { list-style: none; padding: 0; margin: 0; display: grid; gap: 8px; }
       .list li { display: flex; justify-content: space-between; gap: 8px; }
@@ -74,9 +66,9 @@
         <p><strong>Özgün Katkı:</strong> NPM paketlerini yönlü bir karmaşık ağ olarak modellemek; ele geçirilme durumunda oluşacak basamaklanma etkisini ve merkeziyet metrikleri (in-degree, betweenness) ile öngörülen sistemik riski nicel olarak sunmak.</p>
       </section>
 
+      <!-- Ağ Görselleştirmeleri -->
       <section class="section">
-        <h2>Tüm Çıktılar (results/)</h2>
-        <h3>Görseller</h3>
+        <h2>Ağ Görselleştirmeleri</h2>
         <div class="grid">
           <div class="card">
             <div class="card-header">Tüm Ağ — Top N + Bağımlılıklar</div>
@@ -114,6 +106,7 @@
         </div>
       </section>
 
+      <!-- Derece Dağılımları ve Korelasyonlar -->
       <section class="section">
         <h2>Derece Dağılımları ve Korelasyonlar</h2>
         <div class="grid">
@@ -153,6 +146,7 @@
         </div>
       </section>
 
+      <!-- Merkeziyet Liderleri -->
       <section class="section">
         <h2>Merkeziyet Liderleri</h2>
         <div class="grid">
@@ -190,6 +184,7 @@
         </div>
       </section>
 
+      <!-- Risk ve Basamaklanma -->
       <section class="section">
         <h2>Risk ve Basamaklanma</h2>
         <div class="grid">
@@ -247,6 +242,7 @@
         </div>
       </section>
 
+      <!-- Tablolar (LaTeX) -->
       <section class="section">
         <h2>Tablolar (LaTeX)</h2>
         <div class="grid">
@@ -259,6 +255,7 @@
         </div>
       </section>
 
+      <!-- Veri Dosyaları -->
       <section class="section">
         <h2>Veri Dosyaları</h2>
         <div class="list">
@@ -276,7 +273,7 @@
       </section>
 
       <footer class="section">
-        <div class="muted small">Bu sayfa, results/ dizinindeki çıktıların özlü bir sunumudur. Kaynak ve rapor: <a href="paper/main.pdf">paper/main.pdf</a>.</div>
+        <div class="muted">Bu sayfa, results/ dizinindeki çıktıların özlü bir sunumudur. Kaynak ve rapor: <a href="paper/main.pdf">paper/main.pdf</a>.</div>
       </footer>
 
     </div>
