--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
             <div class="art"><img src="results/top10_in_degree.png" alt="İlk 10 in-degree" loading="lazy" /></div>
             <div class="card-body">
               <p>Ağı en fazla üzerine çeken (yüksek bağımlı) paketler. Ele geçirilmeleri geniş etki doğurabilir.</p>
-              <div class="links"><a class="chip" href="results/top10_in_degree.svg" download><b>SVG</b> indir</a></div>
+                <a class="chip" href="results/top10_in_degree.svg" download><b>SVG</b> indir</a>
+                <a class="chip" href="results/top10_in_degree.png" download><b>PNG</b> indir</a>
             </div>
           </div>
           <div class="card">
@@ -163,7 +164,8 @@
             <div class="art"><img src="results/top10_out_degree.png" alt="İlk 10 out-degree" loading="lazy" /></div>
             <div class="card-body">
               <p>Dış bağımlılık yüzeyi geniş olan paketler; tedarik zinciri karmaşıklığını artırır.</p>
-              <div class="links"><a class="chip" href="results/top10_out_degree.svg" download><b>SVG</b> indir</a></div>
+                <a class="chip" href="results/top10_out_degree.svg" download><b>SVG</b> indir</a>
+                <a class="chip" href="results/top10_out_degree.png" download><b>PNG</b> indir</a>
             </div>
           </div>
           <div class="card">
@@ -171,7 +173,8 @@
             <div class="art"><img src="results/top10_betweenness.png" alt="İlk 10 betweenness" loading="lazy" /></div>
             <div class="card-body">
               <p>En kısa yollarda köprü rolü oynayan paketler; kopmaların etkisi büyüktür.</p>
-              <div class="links"><a class="chip" href="results/top10_betweenness.svg" download><b>SVG</b> indir</a></div>
+                <a class="chip" href="results/top10_betweenness.svg" download><b>SVG</b> indir</a>
+                <a class="chip" href="results/top10_betweenness.png" download><b>PNG</b> indir</a>
             </div>
           </div>
           <div class="card">
@@ -179,6 +182,8 @@
             <div class="art"><img src="results/top10_leaders.png" alt="Bileşik liderlik göstergesi" loading="lazy" /></div>
             <div class="card-body">
               <p>In/Out/Betweenness bileşimiyle öne çıkan paketler. Toplam yapısal etkiyi işaret eder.</p>
+                <a class="chip" href="results/top10_leaders.svg" download><b>SVG</b> indir</a>
+                <a class="chip" href="results/top10_leaders.png" download><b>PNG</b> indir</a>
             </div>
           </div>
         </div>
